<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".photoDetail.PhotoDetailActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_album_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:textSize="@dimen/textsize_14"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineHorizontalAlbum"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_photo_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:textSize="@dimen/textsize_14"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineHorizontalPhoto"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontalAlbum" />

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:background="@color/colorImagePlaceHolder"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalPhoto"
        app:srcCompat="@mipmap/ic_launcher" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_photo_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="@dimen/dimen_10"
        android:paddingRight="@dimen/dimen_10"
        android:background="@color/colorCardBackground"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        app:autoSizeMinTextSize="@dimen/textsize_12"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:layout_marginBottom="@dimen/dimen_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalAlbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />
</androidx.constraintlayout.widget.ConstraintLayout>