<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="AlbumDetailsBinding">

        <variable
            name="albumDetailsViewModel"
            type="com.example.optusdemo.albumList.viewModel.AlbumDetailViewModel" />
    </data>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_20"
        android:layout_marginRight="@dimen/dimen_20"
        android:background="@drawable/custom_ripple"
        android:elevation="3dp"
        app:cardCornerRadius="@dimen/dimen_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_ripple"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_10"
            android:weightSum="10">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="4"
                android:src="@{albumDetailsViewModel.thumbnailUrl}" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="left|center_vertical"
                android:text="@{ (albumDetailsViewModel.title!=null?albumDetailsViewModel.title:`No Title`)}"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/textsize_14" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>